Fix landing page button text overlapping itself

--- a/assets/template-landing.css
+++ b/assets/template-landing.css
@@ -7,12 +7,8 @@
 
 
 .button-amazon {
-  -webkit-appearance: none;
-  appearance: none;
   text-decoration: none;
   border: none;
-  cursor: pointer;
-
   display: inline-flex;
   justify-content: center;
   align-items: center;
@@ -25,6 +21,7 @@
   line-height: 0;
   letter-spacing: 0.1em;
   transition: background-color .2s ease;
+  white-space: nowrap;
 }
 
 .button-amazon:hover {
